--- a/src/components/navbar/linksection/Links.scss
+++ b/src/components/navbar/linksection/Links.scss
@@ -19,6 +19,13 @@
          padding-bottom: 23px;
 
     }
+}
 
 
+// MEDIA nav-links
+
+@media only screen and (max-width: 800px) {
+  .nav-links {
+   display: none;
+  }
 }
