--- a/src/components/mainCarousel/MainCarousel.scss
+++ b/src/components/mainCarousel/MainCarousel.scss
@@ -1,3 +1,3 @@
-.react-3d-carousel .slider-container .slider-content .slider-single.active .slider-left, .react-3d-carousel .slider-container .slider-content .slider-single.active .slider-right {
-    display: none;
+react-3d-carousel .slider-container .slider-right div {
+   border: 0 !important;
 }
