--- a/src/components/offerBoxes/AnimatedBox.scss
+++ b/src/components/offerBoxes/AnimatedBox.scss
@@ -118,3 +118,16 @@
   .magic-card__excerpt {
     font-weight: 300;
   }
+
+
+  
+.black-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient( 0deg , rgba(0,0,0,1) 0%, rgba(0,0,0,0) 77%, rgba(248,231,166,0) 100%);
+    opacity: 0.8;
+  }
